--- a/packages/file-upload/package.json
+++ b/packages/file-upload/package.json
@@ -10,6 +10,7 @@
     "@dans-dv/layout": "workspace:*",
     "@dans-dv/submit": "workspace:*",
     "@dans-dv/wrapper": "workspace:*",
+    "@dans-dv/guidance": "workspace:*",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.2",
