--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,6 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm i -g turbo
           pnpm install --frozen-lockfile
 
       - name: Write environment file
@@ -48,7 +47,7 @@ jobs:
           cat "$APP_DIR/.env.production"
       
       - name: Build app
-        run: pnpm build:${{ env.APP_NAME }} --mode production
+        run: pnpm run build:${{ env.APP_NAME }}
 
       - name: Clean up environment file
         run: |
