--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_KEY }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
           source: "apps/${{ env.APP_NAME }}/dist/*"
           target: "/var/www/html/custom/${{ env.APP_NAME }}/"
           strip_components: 1
