--- a/packages/file-upload/package.json
+++ b/packages/file-upload/package.json
@@ -7,19 +7,19 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "@bbc/react-transcript-editor": "^1.4.4",
     "@dans-dv/guidance": "workspace:*",
     "@dans-dv/layout": "workspace:*",
     "@dans-dv/submit": "workspace:*",
     "@dans-dv/wrapper": "workspace:*",
-    "@kmoz000/react-transcript-editor": "^1.4.7",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "motion": "^12.23.24",
     "react": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-redux": "^9.2.0",
-    "tus-js-client": "^4.3.1"
+    "tus-js-client": "^4.3.1",
+    "use-debounce": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^19.1.0"
