--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,16 @@ jobs:
           target: "/var/www/html/custom/${{ env.APP_NAME }}/"
           strip_components: 4
           rm: true
+      - name: Copy temp files to server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          source: "apps/${{ env.APP_NAME }}/public/*"
+          target: "/var/www/html/custom/${{ env.APP_NAME }}"
+          strip_components: 2
+          rm: true
       - name: Update footer HTML on server
         uses: appleboy/ssh-action@v1.2.0
         with:
