updated keyword functionality, added almost full demo to ssh

--- a/apps/ssh/.env
+++ b/apps/ssh/.env
@@ -1,6 +1,8 @@
 VITE_PACKAGING_TARGET = ""
 VITE_ENV_NAME = ""
 VITE_CONFIG_NAME = ""
+VITE_TEMP_DIR = ""
+VITE_DV_URL = ""
 
 ## API keys
 VITE_GEONAMES_API_KEY = ''
