--- a/packages/geomap/package.json
+++ b/packages/geomap/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@dans-dv/inputs": "workspace:*",
     "@dans-dv/layout": "workspace:*",
+    "@dans-dv/shared-store": "workspace:*",
     "@dans-dv/submit": "workspace:*",
     "@dans-dv/wrapper": "workspace:*",
     "@mapbox/mapbox-gl-draw": "^1.5.0",
