--- a/packages/selector/package.json
+++ b/packages/selector/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "dependencies": {
     "@dans-dv/geomap": "workspace:*",
+    "@dans-dv/shared-store": "workspace:*",
     "@dans-dv/submit": "workspace:*",
     "@dans-dv/swh-registration": "workspace:*",
     "@dans-dv/file-upload": "workspace:*",
