--- a/packages/swh-registration/package.json
+++ b/packages/swh-registration/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@dans-dv/inputs": "workspace:*",
     "@dans-dv/layout": "workspace:*",
+    "@dans-dv/shared-store": "workspace:*",
     "@dans-dv/submit": "workspace:*",
     "@dans-dv/wrapper": "workspace:*",
     "@mui/material": "^7.1.0",
